<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <de.j4velin.pedometer.ui.MyPreference
        android:key="goal"
        android:title="@string/goal"/>
    <de.j4velin.pedometer.ui.MyPreference
        android:key="stepsize"
        android:title="@string/step_size"/>

    <de.j4velin.pedometer.ui.MyCheckboxPreference
        android:defaultValue="true"
        android:key="notification"
        android:title="@string/notification"/>

    <de.j4velin.pedometer.ui.MyCheckboxPreference
        android:defaultValue="false"
        android:key="pause_on_power"
        android:title="@string/pause_on_power_title"
        android:summary="@string/pause_on_power_summary"/>

    <de.j4velin.pedometer.ui.MyPreference
        android:key="license"
        android:title="@string/license"/>
</PreferenceScreen>