<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:title="@string/pause"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="100"
        android:title="@string/achievements"
        android:icon="@drawable/trophy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"/>

    <item
        android:id="@+id/tips"
        android:orderInCategory="100"
        android:title="@string/useful_tips"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_split_count"
        android:orderInCategory="100"
        android:title="@string/split_count"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>