<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                tools:context=".Activity_Main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topPanel">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepsInfo"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text="10.000"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/steps"
                android:text="@string/steps"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/stepsInfo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/totalLabel"

                android:text="@string/total" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/averageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/stepsInfo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/averageLabel"
                android:text="@string/average" />
        </LinearLayout>

    </RelativeLayout>


    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:layout_below="@id/topPanel"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/progress">

        <include layout="@layout/steps_chart"/>

    </FrameLayout>


</RelativeLayout>